--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             height="200"
             class = "post-img"
           />
+
+          <button>❤ like</button>
         </header>
 
         <p>
@@ -137,5 +139,7 @@
 
       <footer><p id = "copyright">Copyright &copy; 2027 by The Code Magazine.</p></footer>
     </div>
+
+    
   </body>
 </html>
